--- a/Proyecto_Integrador_M1.ipynb
+++ b/Proyecto_Integrador_M1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,13 +60,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> El libro: ZENSORIALMENTE, no se pudo añadir \n",
+      "\n",
+      "> El libro: HABITOS ATOMICOS, no se pudo añadir \n",
+      "\n",
+      "> El libro: LO MEJOR Y LO PEOR DE INTERNET, no se pudo añadir \n",
+      "\n",
+      "> El libro: LA SOCIEDAD DE LA NIEVE, no se pudo añadir \n",
+      "\n",
+      "> El libro: DEJA DE SER TU, no se pudo añadir \n",
+      "\n",
+      "> El libro: COMO HACER QUE TE PASEN COSAS BUENAS, no se pudo añadir \n",
+      "\n",
+      "> El libro: NUESTRA PARTE DE NOCHE, no se pudo añadir \n",
+      "\n",
+      "> El libro: CUANDO NO QUEDEN MAS ESTRELLAS QUE CONTAR, no se pudo añadir \n",
+      "\n",
+      "> El libro: EL CAMINO DEL ARTISTA, no se pudo añadir \n",
+      "\n",
+      "> El libro: LA PACIENTE SILENCIOSA, no se pudo añadir \n",
+      "\n",
+      "> El libro: LA CASA DE LOS SUICIDIOS, no se pudo añadir \n",
+      "\n",
+      "> El libro: LOS ARBOLES CAIDOS TAMBIEN SON DEL BOSQUE., no se pudo añadir \n",
+      "\n",
+      "> El libro: EL NI/O RESENTIDO, no se pudo añadir \n",
+      "\n",
+      "> El libro: LA INFANCIA DEL MUNDO, no se pudo añadir \n",
+      "\n",
+      "> El libro: 73 MARGARITAS, no se pudo añadir \n",
+      "\n",
+      "> El libro: MUCHAS VIDAS , MUCHOS MAESTROS, no se pudo añadir \n",
+      "\n",
+      "> El libro: EL DIA QUE DEJO DE NEVAR EN ALASKA, no se pudo añadir \n",
+      "\n",
+      "> El libro: LA VIDA INVISIBLE DE ADDIE LARUE, no se pudo añadir \n",
+      "\n",
+      "> El libro: TEORIA DE LA GRAVEDAD, no se pudo añadir \n",
+      "\n",
+      "> El libro: GUARDIANES DE ROSARIO, no se pudo añadir \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "precio_pesos = []\n",
     "precio_dolar = []\n",
-    "errores = 0\n",
     "\n",
     "for e in url_obtenida:   # por cada url, hago un request\n",
     "\n",
@@ -91,7 +137,6 @@
     "\n",
     "        #print(f'se añadio {t} con precios, pesos: {precio2}, dolar: {precio_dolars2} \\n')\n",
     "      except:\n",
-    "         errores+=1\n",
     "         print(f'> El libro: {t}, no se pudo añadir \\n')\n",
     "         precio_pesos.append(None)\n",
     "         precio_dolar.append(None)\n",
@@ -100,29 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "errores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1220.0"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# obtenemos el precio dolar blue\n",
     "url_blue = 'https://www.clarin.com/economia/divisas-acciones-bonos?gclid=Cj0KCQiA-62tBhDSARIsAO7twbYBCdmDyspJS1SAuZ8OcXFZZKpEUJx-A93vXK2IlRpKwbhC9_-eEAIaAk6IEALw_wcB'\n",
@@ -142,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,18 +208,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 100 entries, 0 to 99\n",
+      "RangeIndex: 102 entries, 0 to 101\n",
       "Data columns (total 6 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
-      " 0   titulo             100 non-null    object \n",
-      " 1   url                100 non-null    object \n",
-      " 2   precio_pesos       83 non-null     float64\n",
-      " 3   precio_dolar       83 non-null     float64\n",
-      " 4   precio_dolar_blue  83 non-null     float64\n",
-      " 5   fecha              100 non-null    object \n",
+      " 0   titulo             102 non-null    object \n",
+      " 1   url                102 non-null    object \n",
+      " 2   precio_pesos       82 non-null     float64\n",
+      " 3   precio_dolar       82 non-null     float64\n",
+      " 4   precio_dolar_blue  82 non-null     float64\n",
+      " 5   fecha              102 non-null    object \n",
       "dtypes: float64(3), object(3)\n",
-      "memory usage: 4.8+ KB\n"
+      "memory usage: 4.9+ KB\n"
      ]
     }
    ],
