--- a/proyecto_integrador_m1.ipynb
+++ b/proyecto_integrador_m1.ipynb
@@ -39,9 +39,7 @@
     "\n",
     "for n in h3:\n",
     "    titulo = n.find('a').text.strip()\n",
-    "    titulo_obtenido.append(titulo)\n",
-    "\n",
-    "#titulo_obtenido"
+    "    titulo_obtenido.append(titulo)"
    ]
   },
   {
@@ -53,9 +51,7 @@
     "url_obtenida = []           # Obtenemos la url\n",
     "for url in h3:\n",
     "    u = url.find('a').get('href')\n",
-    "    url_obtenida.append(u)\n",
-    "\n",
-    "#url_obtenida"
+    "    url_obtenida.append(u)"
    ]
   },
   {
@@ -139,8 +135,7 @@
     "      except:\n",
     "         print(f'> El libro: {t}, no se pudo añadir \\n')\n",
     "         precio_pesos.append(None)\n",
-    "         precio_dolar.append(None)\n",
-    "\n"
+    "         precio_dolar.append(None)"
    ]
   },
   {
@@ -196,151 +191,6 @@
     "\n",
     "df = pd.DataFrame(d)\n",
     "df.to_csv('top_cien_cuspide.csv', sep='|', encoding='utf-8', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 102 entries, 0 to 101\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   titulo             102 non-null    object \n",
-      " 1   url                102 non-null    object \n",
-      " 2   precio_pesos       82 non-null     float64\n",
-      " 3   precio_dolar       82 non-null     float64\n",
-      " 4   precio_dolar_blue  82 non-null     float64\n",
-      " 5   fecha              102 non-null    object \n",
-      "dtypes: float64(3), object(3)\n",
-      "memory usage: 4.9+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>titulo</th>\n",
-       "      <th>url</th>\n",
-       "      <th>precio_pesos</th>\n",
-       "      <th>precio_dolar</th>\n",
-       "      <th>precio_dolar_blue</th>\n",
-       "      <th>fecha</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>LA FELICIDAD</td>\n",
-       "      <td>https://cuspide.com/producto/la-felicidad-2/</td>\n",
-       "      <td>19900.0</td>\n",
-       "      <td>23.71</td>\n",
-       "      <td>16.31</td>\n",
-       "      <td>20/01/2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ZENSORIALMENTE</td>\n",
-       "      <td>https://cuspide.com/producto/zensorialmente/</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>20/01/2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ESTE DOLOR NO ES MIO</td>\n",
-       "      <td>https://cuspide.com/producto/este-dolor-no-es-...</td>\n",
-       "      <td>17300.0</td>\n",
-       "      <td>20.61</td>\n",
-       "      <td>14.18</td>\n",
-       "      <td>20/01/2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>LA CASA NEVILLE . LA FORMIDABLE SEÑORITA  MANON</td>\n",
-       "      <td>https://cuspide.com/producto/la-casa-neville-l...</td>\n",
-       "      <td>22000.0</td>\n",
-       "      <td>26.21</td>\n",
-       "      <td>18.03</td>\n",
-       "      <td>20/01/2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>HEARTSTOPPER 5</td>\n",
-       "      <td>https://cuspide.com/producto/heartstopper-5/</td>\n",
-       "      <td>11599.0</td>\n",
-       "      <td>13.82</td>\n",
-       "      <td>9.51</td>\n",
-       "      <td>20/01/2024</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            titulo  \\\n",
-       "0                                     LA FELICIDAD   \n",
-       "1                                   ZENSORIALMENTE   \n",
-       "2                             ESTE DOLOR NO ES MIO   \n",
-       "3  LA CASA NEVILLE . LA FORMIDABLE SEÑORITA  MANON   \n",
-       "4                                   HEARTSTOPPER 5   \n",
-       "\n",
-       "                                                 url  precio_pesos  \\\n",
-       "0       https://cuspide.com/producto/la-felicidad-2/       19900.0   \n",
-       "1       https://cuspide.com/producto/zensorialmente/           NaN   \n",
-       "2  https://cuspide.com/producto/este-dolor-no-es-...       17300.0   \n",
-       "3  https://cuspide.com/producto/la-casa-neville-l...       22000.0   \n",
-       "4       https://cuspide.com/producto/heartstopper-5/       11599.0   \n",
-       "\n",
-       "   precio_dolar  precio_dolar_blue       fecha  \n",
-       "0         23.71              16.31  20/01/2024  \n",
-       "1           NaN                NaN  20/01/2024  \n",
-       "2         20.61              14.18  20/01/2024  \n",
-       "3         26.21              18.03  20/01/2024  \n",
-       "4         13.82               9.51  20/01/2024  "
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ]
   }
  ],
